          notably on_connect* failures now properly abort the entire connect
        - Fix incorrect SQL generated with invalid {rows} on complex resultset
          operations, generally more robust handling of rows/offset attrs
        - Fix incorrect $storage state on unexpected RDBMS disconnects and
          other failure events, preventing clean reconnection (RT#110429)
        - Make sure exception objects stringifying to '' are properly handled
          and warned about (GH#15)
        - Fix corner case of stringify-only overloaded objects being used in
          create()/populate()
        - Fix spurious ROLLBACK statements when a TxnScopeGuard fails a commit
          of a transaction with deferred FK checks: a guard is now inactivated
          immediately before the commit is attempted (RT#107159)
        - Work around unreliable $sth->finish() on INSERT ... RETURNING within
          DBD::Firebird on some compiler/driver combinations (RT#110979)
        - Fix several corner cases with Many2Many over custom relationships
        - Fix t/52leaks.t failures on compilerless systems (RT#104429)
        - Fix t/105view_deps.t failing with libsqlite >= 3.009, where view
          definitions are lazily-checked for correctness only at DML-time as
          opposed to DDL-time (RT#1546088)
        - Fix t/storage/quote_names.t failures on systems with specified Oracle
          test credentials while missing the optional Math::Base36
        - Fix the Sybase ASE storage incorrectly attempting to retrieve an
          autoinc value when inserting rows containing blobs (GH#82)
        - Fix test failures when DBICTEST_SYBASE_DSN is set (unnoticed change
          in error message wording during 0.082800 and a bogus test)

    * Misc
        - Fix invalid variable names in ResultSource::View examples
        - Skip tests in a way more intelligent and speedy manner when optional
          dependencies are missing